@@ -3,6 +3,9 @@ package com.jas.memory;
 import java.util.LinkedList;
 import java.util.List;
 
+/**
+ *  -XX:PermSize=2M -XX:MaxPermSize=2M
+ */
 public class methodAreaMemoryError {
     public static void main(String[] args) {
         List<String> list = new LinkedList<>();
